# tokenstack

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: ci.yml
.omx/context/: codex-app-server-account-usage-20260706T202830Z.md  codex-app-server-account-usage-v2-20260707T003812Z.md  token-usage-dashboard-20260702T182859Z.md
.omx/interviews/: token-usage-dashboard-20260702T183710Z.md
.omx/plans/: architect-review-codex-app-server-account-usage-20260706T202830Z-approve.md  architect-review-codex-app-server-account-usage-20260706T202830Z-iter1.md  architect-review-codex-app-server-account-usage-20260706T202830Z-iter2.md  architect-review-codex-app-server-account-usage-20260706T202830Z-iter3.md  critic-review-codex-app-server-account-usage-20260706T202830Z-approve.md  goal-codex-app-cli-usage-reliability-v3-20260710.md  implementation-plan-codex-app-server-account-usage-20260706T202830Z.md  implementation-plan-tokenstack-command-center-20260702T185334Z.md  prd-codex-app-server-account-usage-20260706T202830Z.md  prd-tokenstack-command-center-20260702T185334Z.md  ralplan-handoff-codex-app-server-account-usage-20260706T202830Z.json  ralplan-handoff-tokenstack-command-center-20260702T185334Z.json  (+7 more)
.omx/ultragoal/: brief.md  goals.json  (+9 more)
docs/: architecture.md  connector-safety.md  data-sources.md  development.md  identified-bug-fixes-2026-07-18.md  oauth-account-source.md  testing.md
scripts/: fixture-scan.mjs  secret-scan.mjs  windows-smoke.ps1
src/: styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/fixtures/codex-history/: history.jsonl
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  auth.rs  codex_app_server.rs  codex_oauth.rs  codex_runtime.rs  commands.rs  connectors.rs  db.rs  desktop.rs  desktop_menu.rs  discovery.rs  importers.rs  lib.rs  main.rs  safety.rs  settings.rs  telemetry.rs
src-tauri/tests/: codex_runtime_windows.rs
src-tauri/tests/fixtures/app_server/: README.md  partial_methods.json  rate_limits_current.json  rate_limits_fallback.json  rate_limits_malformed.json  rate_limits_missing_optional.json  usage_current.json
src-tauri/tests/support/: fake_codex.rs
(+66 files in other folders)
