[package]
name = "tokenstack"
version = "0.1.0"
description = "Local read-only Codex usage and reset-credit command center."
authors = ["TokenStack contributors"]
edition = "2021"
license = "MIT"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri"]

[lib]
name = "tokenstack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tokenstack"
path = "src/main.rs"
required-features = ["tauri-app"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
hex = "0.4"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [], optional = true }
thiserror = "2"
tracing = "0.1"
url = "2"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
tiny_http = "0.12"
