[package]
name = "tokenstack"
version = "0.1.0"
description = "Local Codex usage and reset-credit command center."
authors = ["TokenStack contributors"]
edition = "2021"
license = "MIT"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "tauri/tray-icon", "dep:tauri-plugin-dialog", "dep:tauri-plugin-window-state"]

[lib]
name = "tokenstack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tokenstack"
path = "src/main.rs"
required-features = ["tauri-app"]

[[test]]
name = "codex_runtime_windows"
path = "tests/codex_runtime_windows.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tracing = "0.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
tiny_http = "0.12"
